# JARVIS

./: .env  .gitignore  README.md  jarvis_ui.py  main.py  pyproject.toml  service_account.json  speech-recognition.py  tools.py  whtsapp_automation.py
