[project]
name = "jarvis-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "appopener>=1.7",
    "bs4>=0.0.2",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "numpy<=2.0.2",
    "openwakeword>=0.4.0",
    "pandas<2.2.2",
    "pocketsphinx>=5.0.4",
    "pvporcupine>=4.0.1",
    "pyqt5==5.15.11",
    "pyqt5-qt5==5.15.2",
    "pyqt5-sip==12.18.0",
    "pyaudio>=0.2.14",
    "pywin32>=311",
    "requests>=2.32.5",
    "scipy>=1.13.0",
    "sounddevice>=0.5.3",
    "speechrecognition>=3.14.5",
    "langgraph>=1.0.9",
    "langchain-openai>=1.1.10",
    "selenium>=4.41.0",
    "webdriver-manager>=4.0.2",
    "pycaw>=20251023",
    "screen-brightness-control>=0.27.0",
    "pyautogui>=0.9.54",
    "pywhatkit>=5.4",
    "pyqtgraph>=0.12.0",
    "transformers>=5.2.0",
    "groq>=0.4.1",
    "langchain-ollama>=1.0.1",
    "langchain-cloudflare>=0.2.1",
    "langchain-groq>=1.1.2",
    "soundfile>=0.13.1",
    "psutil>=7.2.2",
    "plyer>=2.1.0",
    "yfinance>=1.2.0",
    "google-auth>=2.48.0",
    "google-auth-oauthlib>=1.3.0",
    "google-api-python-client>=2.191.0",
    "pyperclip>=1.11.0",
    "lxml>=6.0.2",
    "paho-mqtt>=2.1.0",
    "mtranslate>=1.8",
    "edge-tts>=7.2.7",
    "pygame>=2.6.1",
    "pynput>=1.8.1",
]
